--- a/AdminLabrary/AdminLabrary/AdminLibrary.csproj
+++ b/AdminLabrary/AdminLabrary/AdminLibrary.csproj
@@ -232,6 +232,18 @@
     <Compile Include="View\insertUpdateDelete\frmLibrosCRUD.Designer.cs">
       <DependentUpon>frmLibrosCRUD.cs</DependentUpon>
     </Compile>
+    <Compile Include="View\insertUpdateDelete\frmSolicitudesCRUD.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\insertUpdateDelete\frmSolicitudesCRUD.Designer.cs">
+      <DependentUpon>frmSolicitudesCRUD.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\principales\frmSolicitudes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\principales\frmSolicitudes.Designer.cs">
+      <DependentUpon>frmSolicitudes.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\principales\frmAdministradores.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -330,6 +342,9 @@
     <EmbeddedResource Include="View\insertUpdateDelete\frmLibrosCRUD.resx">
       <DependentUpon>frmLibrosCRUD.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="View\insertUpdateDelete\frmSolicitudesCRUD.resx">
+      <DependentUpon>frmSolicitudesCRUD.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\principales\frmAdministradores.resx">
       <DependentUpon>frmAdministradores.cs</DependentUpon>
     </EmbeddedResource>
@@ -360,6 +375,9 @@
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\principales\frmSolicitudes.resx">
+      <DependentUpon>frmSolicitudes.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="Model\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
